--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -253,5 +253,8 @@
   "theme.tags.tagsPageTitle": {
     "message": "Etichette",
     "description": "The title of the tag list page"
+  },
+  "homepage.siteConfig.tagline": {
+    "message": "Programmando | Viaggiando | Guardando video di 🐧"
   }
 }
