--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -255,6 +255,6 @@
     "description": "The title of the tag list page"
   },
   "homepage.siteConfig.tagline": {
-    "message": "Programmando | Viaggiando | Guardando video di 🐧"
+    "message": "👨🏻‍💻 Sviluppatore & Viaggiatore 🗺"
   }
 }
