--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -256,5 +256,8 @@
   },
   "homepage.siteConfig.tagline": {
     "message": "👨🏻‍💻 Sviluppatore & Viaggiatore 🗺"
+  },
+  "homepage.aboutMe": {
+    "message": "Su di me"
   }
 }
