--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -255,7 +255,7 @@
     "description": "The title of the tag list page"
   },
   "homepage.siteConfig.tagline": {
-    "message": "👨🏻‍💻 Sviluppatore & Viaggiatore 🗺"
+    "message": "Sviluppatore & Viaggiatore"
   },
   "homepage.aboutMe": {
     "message": "Su di me"
