--- a/i18n/it/docusaurus-theme-classic/navbar.json
+++ b/i18n/it/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "My Site",
+    "message": "tardito.dev",
     "description": "The title in the navbar"
   },
   "item.label.Tutorial": {
