--- a/i18n/it/docusaurus-plugin-content-blog/options.json
+++ b/i18n/it/docusaurus-plugin-content-blog/options.json
@@ -8,7 +8,7 @@
     "description": "The description for the blog used in SEO"
   },
   "sidebar.title": {
-    "message": "Post recenti",
+    "message": "Tutti i blog",
     "description": "The label for the left sidebar"
   }
 }
