--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -255,7 +255,7 @@
     "description": "The title of the tag list page"
   },
   "homepage.siteConfig.tagline": {
-    "message": "Sviluppatore & Viaggiatore"
+    "message": "Ex proprietario di bar diventato appassionato di programmazione, esploratore perenne e amico dei pinguini. 🐧"
   },
   "homepage.aboutMe": {
     "message": "Su di me"
